# metis-rs

./: Cargo.toml  README.md
metis/: Cargo.toml
metis/src/: common.rs  error.rs  lib.rs  n3.rs  ns.rs  parse.rs  serialize.rs  turtle.rs
metis/src/common/: collections.rs  prolog.rs
metis/src/n3/: regex.rs
metis/src/parse/: error.rs  n3.rs  turtle.rs  util.rs
metis/src/parse/n3/: production.rs  terminals.rs
metis/src/parse/turtle/: production.rs  terminals.rs
metis/src/serialize/: _error.rs  config.rs  turtle.rs
metis/src/serialize/config/: _indentation.rs
metis/src/serialize/turtle/: _stream.rs  regex.rs  stream.rs
metis/src/turtle/: parse.rs  serialize.rs
metis/src/turtle/parse/: production.rs  test_suite.rs
metis/src/turtle/serialize/: _stream.rs
