[package]
name = "metis"
version = "0.1.0"
authors = ["Matthias Farnbauer-Schmidt <dagda92@googlemail.com>"]
description = "Implementation of Notation3"
repository = "https://github.com/MattesWhite/metis-rs"
documentation = "https://docs.rs/metis"
readme = "../README.md"
license = "CECILL-C"
keywords = ["rdf", "linked-data", "semantic-web", "notation3"]
edition = "2018"


[dependencies]
sophia = {git = "http://github.com/pchampin/sophia_rs"}
thiserror = "1.0.10"
regex = "1.3.3"
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "1.0.0"
